updated linkedin for github

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         text-align: right;
         padding: 10px;
       }
-      .LinkedIn {
+      .gitHub {
         color: #2882cc;
         font-style: italic;
       }
@@ -184,9 +184,9 @@
       <h5>
         This page was coded by
         <a
-          href="https://www.linkedin.com/in/liz-golden/"
+          href="https://github.com/EcGolden22"
           target="_blank"
-          class="LinkedIn"
+          class="gitHub"
           ;
         >
           <strong>Liz Golden</strong></a
